--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,12 +14,34 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.meta.project.MainActivity"
+            android:name="com.project.meta.ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.project.meta.ui.AddMetaActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="ADD_META" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.project.meta.ui.ListMetasActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="LIST_META" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+        <activity android:name="com.project.meta.ui.ListMetaItemActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="ITEM_META" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
