--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,15 +5,35 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="7"
         android:targetSdkVersion="17" />
 
+    <permission 
+        android:name="com.project.meta.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+    
+    <uses-permission android:name="com.project.meta.permission.MAPS_RECEIVE"/>
+    
+    <!-- Permissões Normais -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    
+    <uses-feature 
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
+    
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        android:debuggable="true"
+        android:theme="@style/AppTheme" android:debuggable="true">
+        <meta-data
+            android:name="com.google.android.maps.V2.API_KEY"
+            android:value="AIzaSyAYqlNIF-AgoSNb4JEO3ZgXvG5v1ViNC18"/>
         <activity
             android:name="com.project.meta.ui.MainActivity"
             android:label="@string/app_name" >
