--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
     
     <uses-permission android:name="com.project.meta.permission.MAPS_RECEIVE"/>
     
-    <!-- Permissões Normais -->
+    <!-- PermissÃµes Normais -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
@@ -30,7 +30,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:debuggable="true">
+        android:theme="@style/AppTheme" 
+        android:debuggable="true">
         <meta-data
             android:name="com.google.android.maps.V2.API_KEY"
             android:value="AIzaSyAYqlNIF-AgoSNb4JEO3ZgXvG5v1ViNC18"/>
