mudaca no banco de dados

--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
     
     <uses-permission android:name="com.project.meta.permission.MAPS_RECEIVE"/>
     
-    <!-- Permissões Normais -->
+    <!-- PermissÃµes Normais -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
