--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="17" />
+    
+    
 
     <permission 
         android:name="com.project.meta.permission.MAPS_RECEIVE"
@@ -32,16 +34,16 @@
         android:theme="@style/AppTheme" 
         android:debuggable="true">
         <meta-data
-            android:name="com.google.android.maps.V2.API_KEY"
+            android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyAYqlNIF-AgoSNb4JEO3ZgXvG5v1ViNC18"/>
         <activity
             android:name="com.project.meta.ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
-<!--                 <action android:name="android.intent.action.MAIN" /> -->
+                <action android:name="android.intent.action.MAIN" />
 
-<!--                 <category android:name="android.intent.category.LAUNCHER" /> -->
-				<category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+<!-- 				<category android:name="android.intent.category.DEFAULT" /> -->
             </intent-filter>
         </activity>
         <activity android:name="com.project.meta.ui.AddMetaActivity"
@@ -66,15 +68,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.project.meta.ui.TesteActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--         <activity -->
+<!--             android:name="com.project.meta.ui.TesteActivity" -->
+<!--             android:label="@string/app_name" > -->
+<!--             <intent-filter> -->
+<!--                 <action android:name="android.intent.action.MAIN" /> -->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+<!--                 <category android:name="android.intent.category.LAUNCHER" /> -->
+<!--             </intent-filter> -->
+<!--         </activity> -->
     </application>
 
 </manifest>
