--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="17" />
+    
+    
 
     <permission 
         android:name="com.project.meta.permission.MAPS_RECEIVE"
@@ -14,12 +16,9 @@
     
     <uses-permission android:name="com.project.meta.permission.MAPS_RECEIVE"/>
     
-<<<<<<< HEAD
-=======
-    <!-- Permissões Normais -->
->>>>>>> 130aefca247e4c29dd7f8a92b06b47810f168385
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -36,16 +35,16 @@
         android:theme="@style/AppTheme" 
         android:debuggable="true">
         <meta-data
-            android:name="com.google.android.maps.V2.API_KEY"
+            android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyAYqlNIF-AgoSNb4JEO3ZgXvG5v1ViNC18"/>
         <activity
             android:name="com.project.meta.ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
-<!--                 <action android:name="android.intent.action.MAIN" /> -->
+                <action android:name="android.intent.action.MAIN" />
 
-<!--                 <category android:name="android.intent.category.LAUNCHER" /> -->
-				<category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+<!-- 				<category android:name="android.intent.category.DEFAULT" /> -->
             </intent-filter>
         </activity>
         <activity android:name="com.project.meta.ui.AddMetaActivity"
